fixed scrollbar issues for react-data-grid

--- a/src/Site.css
+++ b/src/Site.css
@@ -4,11 +4,11 @@
   display: block;
   background: #ff99cc;
   padding-top: 10px;
-  width: 90%;
-  margin-left: 5%;
-  margin-right: 5%;
+  width: 92%;
+  margin-left: 4%;
+  margin-right: 4%;
   position: fixed;
-  z-index: 9999;
+  z-index: 999;
 }
 
 .Site-header {
@@ -27,7 +27,6 @@
 
 .Site-page {
   display: inline-block;
-  min-width: 100% !important;
   margin-top: 50px;
 }
 
